--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -3,7 +3,7 @@
 
 .header {
 	font-family: OpenSansLight;
-	background:  url('../../img/background-header.jpg') no-repeat center;
+	background:  url('./../img/background-header.jpg') no-repeat center;
 	height:      1000px;
 	width:       100%;
 	padding-top: 51px;
@@ -18,20 +18,14 @@
 		width:      254px;
 		height:     27px;
 		float:      right;
-		background: url('../../img/header-dns-logo.png') no-repeat center;
-	}
-
-	&__dns-link {
-		display: inline-block;
-		height:  100%;
-		width:   100%;
+		background: url('./../img/header-dns-logo.png') no-repeat center;
 	}
 
 	&__tronsmart-logo {
 		margin-top: 150px;
 		width:      466px;
 		height:     67px;
-		background: url('../../img/header-tronsmart-logo.png') no-repeat center;
+		background: url('./../img/header-tronsmart-logo.png') no-repeat center;
 	}
 
 	&__content {
@@ -52,6 +46,6 @@
 		font-size:       18px;
 		margin-top:      115px;
 		text-decoration: none;
-		background:      url('../../img/btn-details.png') no-repeat center;
+		background:      url('./../img/btn-details.png') no-repeat center;
 	}
 }
