--- a/src/scss/blocks/_main.scss
+++ b/src/scss/blocks/_main.scss
@@ -1,4 +1,6 @@
 @import '../common/variables';
+@import '../placeholders/buttons-hovers';
+@import '../keyframes/keyframes';
 
 .main {
 	width:    100%;
@@ -153,11 +155,76 @@
 			&__wrapper-img {
 				width:     50%;
 				max-width: 500px;
+			}
 
-				& > img {
-					width:  100%;
-					height: 100%;
+			&__img {
+				&-speaker {
+					position:   relative;
+					background: url('./../img/speaker.png') no-repeat center;
+					width:      508px;
+					height:     280px;
 				}
+
+				@for $i from 0 through 6 {
+					&-vibe-0#{$i} {
+						position:   absolute;
+						display:    inline-block;
+						background: url('./../img/vibe-0#{$i}.png') no-repeat center;
+						animation: vibe-0#{$i} 2.5s linear infinite;
+						z-index:   1#{$i}0;
+						opacity:    0;
+					}
+				}
+
+				&-vibe-00 {
+					width:  132px;
+					height: 192px;
+					top:    70px;
+					left:   5px;
+				}
+
+				&-vibe-01 {
+					width:  81px;
+					height: 95px;
+					top:    92px;
+					left:   180px;
+				}
+
+				&-vibe-02 {
+					width:  137px;
+					height: 157px;
+					top:    60px;
+					left:   155px;
+				}
+
+				&-vibe-03 {
+					width:  172px;
+					height: 207px;
+					top:    33px;
+					left:   144px;
+				}
+
+				&-vibe-04 {
+					width:  68px;
+					height: 87px;
+					top:    62px;
+					left:   348px;
+				}
+
+				&-vibe-05 {
+					width:  115px;
+					height: 140px;
+					top:    35px;
+					left:   328px;
+				}
+
+				&-vibe-06 {
+					width:  148px;
+					height: 184px;
+					top:    11px;
+					left:   316px;
+				}
+
 			}
 
 			&__title {
@@ -224,11 +291,74 @@
 			&__img {
 				height: 100%;
 				width:  100%;
+
+				&-button {
+					position: relative;
+					width:    134px;
+					height:   338px;
+
+					&-bg {
+						position:   absolute;
+						background: url('./../img/control-button.png') no-repeat center;
+						width:      134px;
+						height:     338px;
+						z-index:    100;
+					}
+
+					&-arrows {
+						position: absolute;
+						width:    30px;
+						height:   115px;
+						left:     0;
+						right:    0;
+						bottom:   100%;
+						margin:   auto;
+					}
+
+					&-arrow-01,
+					&-arrow-02,
+					&-arrow-03,
+					&-arrow-04 {
+						position:   absolute;
+						background: url('./../img/control-button-arrow.png');
+						width:      30px;
+						height:     41px;
+						opacity:    0;
+					}
+
+					@for $i from 1 through 4 {
+						&-arrow-0#{$i} {
+							animation: arrow-0#{$i} 2.5s linear infinite;
+							z-index:   1#{$i}0;
+							top:       #{$i * 2}0px;
+						}
+					}
+				}
+
+				&-rotor {
+					position: relative;
+					height:   232px;
+					width:    217px;
+
+					&-bg {
+						position:   absolute;
+						background: url('./../img/control-rotor-bg.png') no-repeat center center;
+						height:     232px;
+						width:      217px;
+					}
+
+					&-spin {
+						position:   absolute;
+						background: url('./../img/control-rotor-spin.png') no-repeat center center;
+						height:     217px;
+						width:      217px;
+						animation:  rotor 2s linear infinite;
+					}
+				}
 			}
 
 			&__pseudo-wrapper {
 				position: relative;
-				display:  inline-block;
 
 				&:before,
 				&:after {
@@ -332,6 +462,7 @@
 			}
 
 			&__buy-button {
+				@extend %button-hover;
 				display:         inline-block;
 				background:      $purpleHeart;
 				padding:         12px 56px;
@@ -380,6 +511,7 @@
 			}
 
 			&__more-button {
+				@extend %button-border-hover;
 				position:        absolute;
 				bottom:          0;
 				right:           50%;
@@ -389,9 +521,11 @@
 				color:           $purpleHeart;
 				padding:         14px 28px;
 				background:      url('./../img/btn-more.png') no-repeat center;
+				background-size: 100% 100%;
 			}
 
 			&__catalog-button {
+				@extend %button-hover;
 				border-radius:   8px;
 				background:      $purpleHeart;
 				padding:         20px 60px;
